codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__sparkle__tests__astra_idle_timeout.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
assertion_line: 260
expression: "format!(\"before timeout\\n{}\\n\\nfading\\n{}\\n\\nfinished\\n{}\",\nbuffer_text(&active), buffer_text(&fading), buffer_text(&finished),)"
---
before timeout
⠁             ⠄             ⠈           ⠁                ⠐              ⠄ ⢀
›⠁Ask Codex to do anything   ⠈            ⠁                  ⠈        ⠄    ⠂
      ⠠⢀⠐        ⠄        ⠄         ⠠                 ⠄⠂  ⡀                ⠈   ⠄
               ⠄                            ⠐
 ⠈      ⠠             ⠠   ⢀⢀    ⠐                   ⠂    ⠐      ⠐    ⡀
  ⠄                    ⠄      ⢀ ⢀     ⠠              ⠠  ⠄                   ⡀⠂
                              ⠈  ⠁    ⠐                  ⠐           ⢀
  ? for shortcuts                                            100% context left

fading
⠁             ⠄             ⠈           ⠁                ⠐              ⠄ ⢀
›⠁Ask Codex to do anything   ⠈            ⠁                  ⠈        ⠄
      ⠠⢀                                              ⠄⠂  ⡀                ⠈   ⠄
               ⠄
        ⠠             ⠠   ⢀⢀                        ⠂           ⠐    ⡀
  ⠄                           ⢀       ⠠              ⠠  ⠄                   ⡀⠂
                                 ⠁    ⠐                  ⠐           ⢀
  ? for shortcuts                                            100% context left

finished

› Ask Codex to do anything





  ? for shortcuts                                            100% context left
