codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__sparkle__tests__astra_placeholder_spaces.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
expression: buffer_text(&active)
---
    ⠈                    ⢀  ⠈           ⠁        ⠐ ⠐     ⠐              ⠄      ⠈
›⠁Ask Codex to do anything   ⠈          ⠁ ⠁                  ⠈
      ⠠          ⠄                             ⢀      ⠄                   ⠄⠈   ⠄
             ⠐ ⠄        ⡀               ⠠
 ⠈      ⠠⠁            ⠠⠠   ⢀                        ⠂
  ⠄              ⠄                ⠐   ⠠                  ⠂                  ⡀
                                 ⠁
  ? for shortcuts                                            100% context left
