codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__sparkle__tests__astra_sparkle_interaction_40.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
expression: "format!(\"idle\\n{}\\n\\nfading\\n{}\\n\\nfinished\\n{}\", buffer_text(&active),\nbuffer_text(&fading), buffer_text(&finished),)"
---
idle
                         ⢀      ⠁ ⢀
› Ask Codex to do anything         ⠈
      ⠠⢀            ⠠     ⠄         ⠠
  ? for shortcuts    100% context left

fading
                                ⠁ ⢀
› Ask Codex to do anything         ⠈
       ⢀            ⠠     ⠄
  ? for shortcuts    100% context left

finished

› Ask Codex to do anything

  ? for shortcuts    100% context left
